--- a/overlay/FrameworksFog/res/values/config.xml
+++ b/overlay/FrameworksFog/res/values/config.xml
@@ -672,6 +672,11 @@
         <item>org.lineageos.aperture.dev</item>
     </string-array>
 
+     <!-- If not empty, sets the AVC codec profile level used for the internal screen recorder.
+         Possible values: 3, 3.1, 3.2, 4, 4.1, 4.2
+    -->
+    <string name="config_screenRecorderAVCProfileLevel" translatable="false">3.1</string>
+     
     <!-- The list of package IDs that are not allowed to use aux cameras. -->
     <string-array name="config_cameraAuxPackageExcludeList" translatable="false">
         <item>org.telegram.messenger</item>
