fog: overlay: Allow more cached apps in the background
* Google has provisioned this on the Pixel 5 (RQ1A.201205.010) to utilize the 8 GB of RAM better, and I have also observed that a lightweight selection of apps was hitting the cached app limit before exhausting RAM on another device with 8 GB of RAM

This shouldn't cause adverse effects on devices with less RAM (e.g. 4GB) as the low memory killer should kick in long before this limit on such devices

Change-Id: I2aaa9066f89ee1fd60d84273722946942670308a
Signed-off-by: Kinnara <186306024+Kinnara-icz@users.noreply.github.com>

--- a/overlay/FrameworksFog/res/values/config.xml
+++ b/overlay/FrameworksFog/res/values/config.xml
@@ -541,6 +541,9 @@
          autodetected from the Configuration. -->
     <bool name="config_showNavigationBar">true</bool>
 
+     <!-- Allow more cached apps in the background -->
+        <item>activity_manager/max_cached_processes=64</item>
+     
     <!-- When true use the linux /dev/input/event subsystem to detect the switch changes
          on the headphone/microphone jack. When false use the older uevent framework. -->
     <bool name="config_useDevInputEventForAudioJack">true</bool>
