--- a/overlay/FrameworksFog/res/values/config.xml
+++ b/overlay/FrameworksFog/res/values/config.xml
@@ -356,6 +356,9 @@
     <!--  Allow CornerHandleView and PathSpecCornerPathRenderer to decouple from corner-radius -->
     <dimen name="config_rounded_mask_size">60px</dimen>
 
+     <!-- Determines whether the shell features all run on another thread. -->
+    <bool name="config_enableShellMainThread">true</bool
+                                                       
     <!-- If this is true, the screen will come on when you unplug usb/power/whatever. -->
     <bool name="config_unplugTurnsOnScreen">true</bool>
 
